--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
             <div class="col-md-4 text-right"><img class="logo" src="./images/logo.png"></div>
             <div class="col-md-7 col-md-offset-1 nav-container">
                 <ul class="nav">
-                    <li class="nav-item">WORK</li>
-                    <li class="nav-item">SERVICES</li>
-                    <li class="nav-item">PARTNERS</li>
-                    <li class="nav-item">ABOUT</li>
-                    <li class="nav-item">CAREERS</li>
-                    <li class="nav-item">CONTACT</li>
+                    <li class="nav-item"><a href="#">WORK</a></li>
+                    <li class="nav-item"><a href="#">SERVICES</a></li>
+                    <li class="nav-item"><a href="#">PARTNERS</a></li>
+                    <li class="nav-item"><a href="#">ABOUT</a></li>
+                    <li class="nav-item"><a href="#">CAREERS</a></li>
+                    <li class="nav-item"><a href="#">CONTACT</a></li>
                     <li><img src="./images/nav_search-ico.png"></li>
             </div>
         </div>
